# ZED42

./: .env.example  .gitignore  .npmrc  ARCHITECTURE.txt  Cargo.toml  INSTALLATION_COMPLETE.md  INSTALL_STATUS.md  LICENSE  PROJECT_STATUS.md  README.md  SETUP.md  TESTING_GUIDE.md  cargo_check_log.txt  duplicates_full.txt  rust-toolchain.toml
.agent/rules/: rules-1-ag.md  rules-2-ag.md  style-guide-ag.md
.cargo/: config.toml
.claude/: PROGRESS_REPORT.md  RULES.md  STATUS.md  STYLE_GUIDE.md  settings.local.json
config/: constraints.toml  providers.toml
crates/agents/: Cargo.toml
crates/agents/src/: base.rs  blue.rs  green.rs  lib.rs  red.rs  state.rs
crates/agents/src/orchestrator/: cortex.rs  mailbox.rs  mod.rs
crates/agents/tests/: lifecycle.rs
crates/blackboard/: Cargo.toml
crates/blackboard/src/: aura.rs  database.rs  graph.rs  lib.rs  live_select.rs  messages.rs  mom.rs  resolver.rs  state.rs  subscriptions.rs  tests.rs  types.rs
crates/blackboard/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: ledger.rs  lib.rs  messages.rs  result.rs  titan.rs  traits.rs  types.rs  vox.rs
crates/core/src/titan/: monitor.rs
crates/cortex/: Cargo.toml
crates/cortex/src/: intent.rs  lib.rs  planner.rs  team_manager.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: error.rs  lib.rs  types.rs
crates/ledger/tests/: ledger_compliance.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  constrained.rs  lib.rs  prompts.rs  schema.rs  tests.rs  types.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: build.rs  connectors.rs  git.rs  lib.rs  sandbox.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  working.rs
crates/memory/src/archive/: database.rs  mod.rs  query.rs  tests.rs  types.rs
crates/memory/src/knowledge_graph/: database.rs  mod.rs  search.rs  tests.rs  types.rs
crates/memory/src/session/: database.rs  mod.rs  search.rs  tests.rs  types.rs
crates/memory/tests/: integration.rs
crates/mom/: Cargo.toml
crates/mom/src/: circuit_breaker.rs  lib.rs  types.rs
crates/mom/tests/: mom_compliance.rs
crates/toolboxes/: Cargo.toml
crates/toolboxes/src/: analysis.rs  code.rs  external.rs  file_manipulation.rs  fs_guard.rs  lib.rs  shell.rs  testing.rs  vcs.rs  visualization.rs
crates/ui/: Cargo.toml  index.html  package.json  pnpm-lock.yaml
crates/ui/src/: lib.rs
docs/: Blackboard_HEARTBEAT.txt  DEVELOPMENT.md  LICENSE_NOTICE.md  PROJECT_STRUCTURE.md  VOX_ISOLATION_REPORT.md
docs/ADR/: 0001-migration-to-pnpm-and-global-store.md  0002-wide-and-flat-workspace.md  0003-vox-protocol.md  0004-message-oriented-middleware.md  0005-aura-vitality-substrate.md  0006-adversarial-multi-agent-teams.md  0007-multi-tier-memory-substrate.md  0008-surrealdb-integration-strategy.md  0009-intelligence-ledger.md  0010-model-orchestration-matrix.md  0011-protocol-titan-substrate.md  0012-resilience-and-panic-recovery.md
