[package]
name = "zed42-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
async-openai.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Internal crates
zed42-core = { path = "../core" }
zed42-blackboard = { path = "../blackboard" }
zed42-toolboxes = { path = "../toolboxes" }
zed42-memory = { path = "../memory" }
zed42-llm = { path = "../llm" }
schemars = "0.8"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
