[package]
name = "zed42-blackboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zed42-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
futures-util = "0.3"
dashmap.workspace = true
zed42-ledger = { version = "0.1.0", path = "../ledger" }

[dev-dependencies]
tempfile = "3.24.0"
