[package]
name = "zed42-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
surrealdb = { workspace = true, features = ["default"] }
rust_decimal.workspace = true
parking_lot.workspace = true
sysinfo = "0.37.2"
