[package]
name = "zed42-cortex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Internal crates
zed42-core = { path = "../core" }
zed42-blackboard = { path = "../blackboard" }
zed42-agents = { path = "../agents" }
zed42-memory = { path = "../memory" }
zed42-toolboxes = { path = "../toolboxes" }

