[package]
name = "zed42-toolboxes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Internal crates
zed42-core = { path = "../core" }

# Code analysis
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-go.workspace = true

# Git integration
git2.workspace = true

# Internal crates
zed42-llm = { path = "../llm" }
schemars = "0.8"
sysinfo = "0.37.2"

[dev-dependencies]
tempfile.workspace = true

